k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: ms-files
  name: ms-files-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-files
  template:
    metadata:
      labels:
        app: ms-files
    spec:
      volumes:
        - name: service-account-creds
          secret:
            secretName: service-account-creds
      containers:
      - env:
        - name: AUTH_SERVICEACCOUNT
          value: '/etc/sa/service-account-creds.json'

        image: gcr.io/{PROJECT_ID}/ms-file:{TEMPLATE_VERSION}
        imagePullPolicy: Always
        
        name: ms-files
        volumeMounts:
          - mountPath: /etc/sa
            name: service-account-creds
            readOnly: true
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15

        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 300Mi
