k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-ip
    networking.gke.io/managed-certificates: betalfa-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /upload
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-files-service
            port:
              number: 8080
